--- a/EqUiWebUi/packages.config
+++ b/EqUiWebUi/packages.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net451" />
+  <package id="bootstrap" version="3.3.7" targetFramework="net46" />
+  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net46" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="Hangfire" version="1.6.17" targetFramework="net451" />
   <package id="Hangfire.Core" version="1.6.17" targetFramework="net451" />
   <package id="Hangfire.SqlServer" version="1.6.17" targetFramework="net451" />
-  <package id="HtmlAgilityPack" version="1.6.5" targetFramework="net46" />
+  <package id="HtmlAgilityPack" version="1.6.7" targetFramework="net46" />
   <package id="htmldiff.net" version="1.3" targetFramework="net451" />
-  <package id="jQuery" version="3.2.1" targetFramework="net451" />
+  <package id="jQuery" version="1.9.1" targetFramework="net46" />
   <package id="log4net" version="2.0.8" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
@@ -23,5 +24,6 @@
   <package id="NonFactors.Grid.Mvc5" version="4.2.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
+  <package id="Spin.js" version="2.3.2.1" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
